PlayerHP and Enemy now deals damage and follows the player

--- a/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
+++ b/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Player\PlayerHP.cs" />
     <Compile Include="Assets\Enemy\EnemyController.cs" />
     <Compile Include="Assets\Player\PlayerController.cs" />
   </ItemGroup>
