--- a/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
+++ b/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\NPC\NPCInteraction.cs" />
     <Compile Include="Assets\Game\ArenaCameraController.cs" />
+    <Compile Include="Assets\Player\PlayerMana.cs" />
     <Compile Include="Assets\TutorialCombatArea\EnemyScripts\EnemySpawner.cs" />
     <Compile Include="Assets\Game\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
