--- a/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
+++ b/PA_TheReturnOfTheFallen/Assembly-CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\NPC\NPCInteraction.cs" />
     <Compile Include="Assets\Game\ArenaCameraController.cs" />
     <Compile Include="Assets\Player\PlayerMana.cs" />
+    <Compile Include="Assets\Player\Portal3D.cs" />
     <Compile Include="Assets\TutorialCombatArea\EnemyScripts\EnemySpawner.cs" />
     <Compile Include="Assets\Game\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Assets\NPC\NPCInteractionTrigger.cs" />
     <Compile Include="Assets\Scripts\HealthBarPersistent.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\PortalTraveler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\NPC\NPCShopUI.cs" />
     <Compile Include="Assets\Player\PlayerHP.cs" />
